--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -146,6 +146,13 @@
     <string name="ShareActivity_share_with">Share with</string>
 
     <!-- ExportFragment -->
+    <string name="ExportFragment_export_to_sd_card">Export To SD Card?</string>
+    <string name="ExportFragment_this_will_export_your_encrypted_keys_settings_and_messages">This
+        will export your encrypted keys, settings, and messages to the SD card.
+    </string>
+    <string name="ExportFragment_exporting_keys_settings_and_messages">Exporting encrypted keys,
+        settings, and messages...
+    </string>
     <string name="ExportFragment_export">Export</string>
     <string name="ExportFragment_export_plaintext_to_sd_card">Export plaintext to SD card?</string>
     <string name="ExportFragment_warning_this_will_export_the_plaintext_contents">Warning, this will
@@ -408,6 +415,8 @@
     <string name="export_fragment__export_plaintext_backup">Export plaintext backup</string>
     <string name="export_fragment__export_a_plaintext_backup_compatible_with">
         Export a plaintext backup compatible with \'SMSBackup And Restore\' to the SD card.</string>
+    <string name="export_fragment__export_encrypted_backup">Export encrypted backup</string>
+    <string name="export_fragment__export_an_encrypted_backup_to_the_sd_card">Export an encrypted backup to the SD card.</string>
     <string name="import_fragment__import_system_sms_database">Import system SMS database</string>
     <string name="import_fragment__import_the_database_from_the_default_system">Import the database
         from the default system messenger app.
