--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -592,5 +592,16 @@ Importer un fichier de sauvegarde non-chiffré. Compatible avec « SMSBackup And
   <string name="trimmer__old_messages_successfully_deleted">Anciens messages supprimés avec succès</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icône de transport</string>
+  <!-- Wear Reply -->
+  <string name="reply_label">Réponse</string>
+  <string name="label">Réponse</string>
+  <string-array name="wear_replies">
+    <item>Oui</item>
+    <item>Non</item>
+    <item>OK</item>
+    <item>Merci</item>
+    <item>:)</item>
+    <item>:(</item>
+  </string-array>
   <!--EOF-->
 </resources>
