--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -700,6 +700,17 @@
     <!-- transport_selection_list_item -->
     <string name="transport_selection_list_item__transport_icon">Transport icon</string>
 
+    <!-- Wear Reply -->
+    <string name="reply_label">Reply</string>
+    <string name="label">Reply</string>
+    <string-array name="wear_replies">
+        <item>Yes</item>
+        <item>No</item>
+        <item>OK</item>
+        <item>Thanks</item>
+        <item>:)</item>
+        <item>:(</item>
+    </string-array>
     <!-- EOF -->
 
 </resources>
