--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -778,6 +778,10 @@
     <!-- transport_selection_list_item -->
     <string name="transport_selection_list_item__transport_icon">Transport icon</string>
 
+    <!-- fileslide -->
+    <string name="multipart_mms_question_title">File too large</string>
+    <string name="multipart_mms_question_message">The file you selected is too big to fit in one MMS. Would you split up the file and send the following amount of messages: </string>
+
     <!-- EOF -->
 
 </resources>
